--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
           <div>Help</div>
         </div>
       </section>
-      <div class="content"></div>
+      <div class="content">
+        <h1>WELCOME TO MY APP</h1>
+      </div>
     </div>
   </body>
 </html>
